<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <group android:menuCategory="container">
        <item
            android:id="@+id/map"
            android:title="@string/title_activity_maps"
            android:icon="@drawable/baseline_map_24"
            app:showAsAction="always" />
        <item
            android:id="@+id/action_back"
            android:title="Back"
            android:icon="@drawable/baseline_arrow_back_24"
            app:showAsAction="always" />
        <item android:id="@+id/add"
            android:title="@string/add"
            android:icon="@drawable/baseline_add_a_photo_24"
            app:showAsAction="always" />
        <item android:id="@+id/language"
            android:title="@string/language"
            android:icon="@drawable/baseline_language_24"
            app:showAsAction="always" />
        <item android:id="@+id/logout"
            android:title="@string/logout"
            android:icon="@drawable/baseline_exit_to_app_24"
            app:showAsAction="always" />
    </group>
</menu>