<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="32dp"
    android:background="@color/brown_4"
    tools:context=".ui.activity.stories.DetailStoryActivity">

    <androidx.cardview.widget.CardView
        android:id="@+id/card_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="32dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        card_view:cardCornerRadius="10dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="300dp"
            android:layout_height="350dp"
            android:background="@color/brown_1"
            android:padding="0dp">

            <ImageView
                android:id="@+id/im_item_photo"
                android:layout_width="0dp"
                android:layout_height="250dp"
                android:contentDescription="@string/imagedetail"
                android:scaleType="centerCrop"
                android:transitionName="@string/profile"
                app:layout_constraintBottom_toTopOf="@+id/tv_item_name"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHeight_percent="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:src="@tools:sample/avatars" />

            <TextView
                android:id="@+id/tv_item_name"
                style="@style/TextContent.White.Bold"
                android:layout_marginTop="32dp"
                android:textSize="20sp"
                android:transitionName="@string/name"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/im_item_photo"
                tools:text="@string/name" />

            <TextView
                android:id="@+id/tv_item_description"
                style="@style/TextContent.White"
                android:layout_marginTop="0dp"
                android:textSize="20sp"
                android:transitionName="@string/description"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_item_name"
                tools:text="@string/description" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>